[package]
name = "polymarket-rs-client"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "0.8.12"
alloy-sol-types = { version = "0.8.12", features = ["eip712-serde", "json"] }
ureq = { version = "2.10.1", features = ["json", "charset"] }
alloy-signer-local = { version = "0.6.4", features = ["eip712"] }
alloy-signer = { version = "0.6.4", features = ["eip712"] }
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.8"
anyhow = "1.0.93"
serde = "1.0.215"
