[package]
name = "polymarket-rs-client"
description = "An async client to interact with polymarket."
repository = "https://github.com/TechieBoy/polymarket-rs-client"
readme = "README.md"
license = "Apache-2.0"
version = "0.1.1"
edition = "2021"

[dependencies]
alloy-primitives = "1.0"
alloy-sol-types = { version = "1.0", features = ["eip712-serde", "json"] }
ureq = { version = "2.10.1", features = ["json", "charset"] }
alloy-signer-local = { version = "1.0", features = ["eip712"] }
alloy-signer = { version = "1.0", features = ["eip712"] }
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.8"
anyhow = "1.0.93"
serde = "1.0.215"
serde_json = "1.0.133"
reqwest = { version = "0.12.9", features = ["json"] }
rust_decimal = { version = "1.36.0", features = ["serde-with-str"] }
rand = "0.8.5"
serde-json-fmt = "0.1.0"
sha1 = "0.10.6"


[dev-dependencies]
tokio = { version = "1.41.1", features = ["rt", "macros"] }


# Faster builds
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
